# web_scraping_101

./: .gitignore  README.md  pyproject.toml
crawl/: __init__.py  pdf_scraper.py  serpapi_scraper.py
crawl/ku/: __init__.py  crawl_main.py
crawl/nu/: __init__.py  crawl_main.py
crawl/su/: __init__.py  crawl_main.py
crawl/thaijo/: __init__.py  crawl_main.py  fetch_pdf_urls.py  test_download_pdf.py  utils.py
notebooks/: scrape_pdfs_101.ipynb
utils/: check_malware.py  check_privacy_error.py  logger.py  pdf_operations.py
