[project]
name = "web-scraping-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.6.3",
    "google-search-results>=2.4.2",
    "lxml>=5.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
